correct spacing of vacancy review

--- a/app/assets/stylesheets/components/review.scss
+++ b/app/assets/stylesheets/components/review.scss
@@ -18,6 +18,8 @@
       }
 
       &__title {
+        padding-bottom: govuk-spacing(2);
+
         @include govuk-media-query($from: tablet) {
           flex-basis: 75%;
         }
